--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <section class="video">
         <div class="container">
             <h2 class="video-title">Видео о нашей работе</h2>
-            <p class="video-desc">Просто Посмотрите, Как Мы Работаем</p>
+            <p class="video-desc">Просто посмотрите, как мы работаем</p>
             <div class="video-box">
                 <a data-fancybox href="https://www.youtube.com/watch?v=Blu_yCEFYvk" class="video-play">
                     <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
